# skillfoundry-harness

./: AGENTS.md  CLAUDE.md  CURRENT_STATE.md  PRINCIPLES.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: repo-hygiene.yml
.reviews/: dcfd7e4-4d6050d-discovery-adapter-2026-04-23.md
docs/: ARCHITECTURE.md  CONTEXT_REPOSITORY_CONTRACT.md  DESIGN_SYNTHESIS.md  REPO_POLICY.md  adr-discovery-adapter-pure-parse-interface.md  claims-per-assumption-options.md
schemas/: context-bundle.schema.json
scripts/: check_repo_hygiene.py  preflight-deploy.sh
scripts/hooks/: install.sh  pre-commit
src/skillfoundry_harness/: __init__.py  approval_records.py  bootstrap.py  bundles.py  cli.py  execution.py  integrity.py  promotion.py  repository.py  runtime.py  validation.py  validation_records.py  worktrees.py
src/skillfoundry_harness/discovery_adapter/: MAPPING.md  __init__.py  emit.py  migrate.py
tests/: test_discovery_adapter.py  test_validation.py
tests/fixtures/minimal_context_repo/: README.md  skillfoundry.toml
tests/fixtures/minimal_context_repo/bundles/: minimal-context.json
tests/fixtures/minimal_context_repo/memory/: mission.md
