[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skillfoundry-harness"
version = "0.1.0"
description = "Harness package for Skillfoundry agents and context repositories"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.20",
    "referencing>=0.30",
]

[project.scripts]
skillfoundry = "skillfoundry_harness.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
skillfoundry_harness = ["schemas/*.json"]
